# PySpek

./: .gitignore  Makefile  README.md  README.rst  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml  greetings.yml  linux_ubuntu_18_04_python_3_6_test.yml  linux_ubuntu_18_04_python_3_7_build.yml  linux_ubuntu_18_04_python_3_7_test.yml  linux_ubuntu_18_04_python_3_8_build.yml  linux_ubuntu_18_04_python_3_8_test.yml  linux_ubuntu_18_04_python_3_9_build.yml  linux_ubuntu_18_04_python_3_9_test.yml  linux_ubuntu_20_04_python_3_7_build.yml  linux_ubuntu_20_04_python_3_7_test.yml  linux_ubuntu_20_04_python_3_8_build.yml  linux_ubuntu_20_04_python_3_8_test.yml  linux_ubuntu_20_04_python_3_9_build.yml  linux_ubuntu_20_04_python_3_9_test.yml  macos_catalina_10_15_python_3_7_build.yml  macos_catalina_10_15_python_3_7_test.yml  macos_catalina_10_15_python_3_8_build.yml  macos_catalina_10_15_python_3_8_test.yml  macos_catalina_10_15_python_3_9_build.yml  macos_catalina_10_15_python_3_9_test.yml  python_code_quality.yml  test_build.yml  windows_server_2016_python_3_7_build.yml  windows_server_2016_python_3_7_test.yml  windows_server_2016_python_3_8_build.yml  windows_server_2016_python_3_8_test.yml  windows_server_2016_python_3_9_build.yml  windows_server_2016_python_3_9_test.yml  windows_server_2019_python_3_7_build.yml  windows_server_2019_python_3_7_test.yml  windows_server_2019_python_3_8_build.yml  windows_server_2019_python_3_8_test.yml  windows_server_2019_python_3_9_build.yml  (+1 more)
pyspek/: main.py
pyspek/analysis/: pcm.py  (+1 more)
tests/: test_main.py
(+5 files in other folders)
