[tool.poetry]
name = "PySpek"
version = "0.1.0"
description = ""
authors = ["Federico García <garciafedericoagustin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
miniaudio = "^1.44"
numpy = "^1.20.3"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
